syntax = "proto3";

package Grpc.Domain;

service RpcTest{
	rpc SayHello(HelloRequest) returns (HelloReponse);

	rpc SayHelloEvent(HelloRequest) returns(HelloReponse);
}

message HelloReponse{
	string Result = 1;
	int32 Code = 2;
	string Msg = 3;
}

message HelloRequest {
	
	// 名称
	string name = 1;
	//年龄
	int32 Age = 2;
}